// ============================================================================
// Project: linguine — local lab inference control plane
// Database: SQLite (modernc.org/sqlite, CGO-free, WAL mode)
//
// This file is the single source of truth for the database schema. It stays
// in sync with the implemented migrations in internal/store/migrations/*.sql.
// Phase 0 implemented auth + node inventory; Phase 1a adds the node model
// catalog and request audit log. Swap logs, aliases, sessions, KV-cache stats
// and capability profiles arrive in later phases and are added here when their
// migrations land.
// ============================================================================

Project linguine {
  database_type: 'SQLite'
  Note: 'Linguine control-plane schema. Kept in sync with internal/store/migrations/*.sql.'
}

// ----------------------------------------------------------------------------
// Authentication & access control
// ----------------------------------------------------------------------------

Table api_keys {
  id          text [pk, not null, note: 'KSUID/UUIDv4']
  name        text [not null, note: 'Human-readable label (e.g. "Production App Key")']
  token_hash  text [not null, unique, note: 'Argon2id hash of the client API key']
  prefix      text [not null, note: 'Leading characters for display/identification']
  role        text [not null, default: `'client'`', note: 'Enum: client, admin']
  status      text [not null, default: `'active'`', note: 'Enum: active, revoked, expired']
  expires_at  datetime [note: 'NULL for non-expiring keys']
  created_at  datetime [not null, default: `CURRENT_TIMESTAMP`]
  updated_at  datetime [not null, default: `CURRENT_TIMESTAMP`]

  Note: 'Client credentials authorising requests against the OpenAI-compatible /v1 endpoints'
}

Table node_enrollment_tokens {
  id          text [pk, not null, note: 'PASETO jti; the raw bearer token is issued once and verified by signature, not stored here']
  node_name   text [not null, note: 'Expected hostname or identification label']
  status      text [not null, default: `'active'`', note: 'Enum: active, revoked, expired']
  expires_at  datetime [note: 'NULL for non-expiring tokens']
  created_at  datetime [not null, default: `CURRENT_TIMESTAMP`]

  Note: 'Worker onboarding tokens. The raw PASETO is shown to the operator once at creation; revocation flips status to revoked.'
}

// ----------------------------------------------------------------------------
// Node inventory
// ----------------------------------------------------------------------------

Table nodes {
  id             text [pk, not null, note: 'Assigned node identifier (e.g. "node-gpu-melbourne")']
  token_id       text [not null, ref: > node_enrollment_tokens.id, note: 'Enrollment token used during handshake']
  status         text [not null, default: `'offline'`', note: 'Enum: online, offline']
  remote_addr    text [note: 'Outbound address seen by the router']
  active_model    text [note: 'Last-known loaded model, refreshed on heartbeat']
  last_heartbeat datetime [note: 'Timestamp of the last received heartbeat']
  created_at     datetime [not null, default: `CURRENT_TIMESTAMP`]
  updated_at     datetime [not null, default: `CURRENT_TIMESTAMP`]

  Note: 'Connected worker nodes. Volatile telemetry (VRAM, TPS, active_requests) stays in-memory in the router; only active_model + last_heartbeat persist for post-restart dashboard state.'
}

Table node_model_catalogs {
  id              integer [pk, increment]
  node_id          text [not null, ref: > nodes.id, note: 'Cascade delete when node is removed']
  model_name       text [not null, note: 'Model id advertised by the engine /v1/models endpoint']
  file_size_bytes  integer [note: 'Size on disk for load-time estimation; nullable in Phase 1a']
  last_scanned_at  datetime [not null, default: `CURRENT_TIMESTAMP`]

  indexes {
    (node_id, model_name) [unique]
  }

  Note: 'Catalog of models each worker can serve, probed from the local engine. Kept in sync by the router on heartbeat.'
}

// ----------------------------------------------------------------------------
// Request audit & usage metrics
// ----------------------------------------------------------------------------

Table request_audit_logs {
  id                 integer [pk, increment]
  api_key_id         text [ref: > api_keys.id, note: 'Nullable for unauthenticated internal requests']
  node_id            text [ref: > nodes.id, note: 'Worker node that served the inference']
  model_requested    text [not null]
  model_served       text [not null]
  prompt_tokens      integer [default: 0]
  completion_tokens  integer [default: 0]
  ttft_ms            integer [note: 'Time To First Token in milliseconds']
  total_duration_ms  integer [note: 'Total duration of request']
  was_streamed        boolean [not null, default: false]
  was_model_swapped  boolean [not null, default: false]
  status_code        integer [not null, default: 200]
  created_at         datetime [not null, default: `CURRENT_TIMESTAMP`]

  Note: 'Audit and usage history for dashboard charts and rate limiting. Written async so the /v1 hot path never blocks on SQLite.'
}

Table admin_audit_logs {
  id          integer [pk, increment]
  event       text [not null, note: 'Enum: login_failed, login_throttled, login_ok, key_created, key_revoked, enrollment_created, enrollment_revoked']
  api_key_id  text [ref: > api_keys.id, note: 'Nullable; the key id when identifiable']
  detail      text [note: 'Nullable; event-specific context (e.g. worker enrolment token id + node name, whose ids are not API keys)']
  remote_ip   text [note: 'Source IP of the attempt']
  status_code integer [not null]
  created_at  datetime [not null, default: `CURRENT_TIMESTAMP`]

  Note: 'Admin dashboard auth events for intrusion detection. Written synchronously (low frequency), unlike the async request audit log.'
}
